[gd_scene load_steps=2 format=3 uid="uid://c406ewp22md2t"]

[ext_resource type="Script" path="res://scripts/ui/TechTreeNode.gd" id="1_node"]

[node name="TechTreeNode" type="PanelContainer"]
custom_minimum_size = Vector2(160, 140)
mouse_filter = 0
script = ExtResource("1_node")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="StatusIndicator" type="ColorRect" parent="VBox"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
mouse_filter = 2
color = Color(0.5, 0, 0, 1)

[node name="Icon" type="TextureRect" parent="VBox"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
mouse_filter = 2
text = "Research Name"
horizontal_alignment = 1
autowrap_mode = 3

[node name="CostContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="GlowEffect" type="ColorRect" parent="."]
layout_mode = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

